--- a/styles/start.css
+++ b/styles/start.css
@@ -91,10 +91,18 @@ div#maincontent {
       font-size: 0.9em;
       line-height: 2em;
     }
-
+  div#maincontent_signup {
+    position: fixed;
+    top: 0;
+    left: 30vw;
+    width: 40vw;
+    height: 100vw;
+    margin: 0;
+    background-color: rgba(236,236,236,0.25);
+  }
 div#signup_form {
   width: 80%;
-  margin: 20% 4.5%;
+  margin: 40% 4.5%;
   color: #ececec;
   text-align: center;
 }
