--- a/styles/posts.css
+++ b/styles/posts.css
@@ -1,65 +1,67 @@
-div.thread-show {
+a.printed-post-frame {
 width: 60vw;
 display: inline-block;
 padding: 3vh 2vw;
 margin-left: 20vw;
 position: relative;
 min-height: 140px;
+color: #000;
+z-index: 500;
 }
-div.thread-show:nth-child(even) {
+a.printed-post-frame:nth-child(even) {
 background-color: rgba(92,144,168,0.4);
 }
-div.thread-show:nth-child(odd) {
+a.printed-post-frame:nth-child(odd) {
 background-color: rgba(92,144,168,0.5);
 }
-div.thread-show .thread-left {
+.post-left {
   float: left;
   width: 85%;
 }
-  div.thread-show p.thread-title {
+  h2.printed-post-title {
     font-size: 1.5em;
     font-weight: 600;
     margin: 0;
     position: absolute;
     top: 2vh;
   }
-  div.thread-show p.firstpost {
+   p.printed-post-content {
     font-size: 0.8em;
     margin: 0;
     position: absolute;
     top: 6.5vh;
     width: 80%;
   }
-div.thread-show .thread-right {
+.post-right {
   float: right;
 }
-  .thread-right .upvote,
-  .thread-right .downvote {
+  .post-right .upvote,
+  .post-right .downvote {
     display: block;
     width: 2vw;
     height: 5vh;
     background-size: contain;
     background-repeat: no-repeat;
   }
-  .thread-right .upvote {
+  .post-right .upvote {
     background-image: url(../img/upvote.png);
     position: absolute;
     top: 2.5vh;
     right: 1.5vw;
   }
-    .thread-right .upvote:hover {
+    .post-right .upvote:hover {
       background-image: url(../img/upvote_blue.png);
     }
-  .thread-right .downvote {
+  .post-right .downvote {
     background-image: url(../img/downvote.png);
     position: absolute;
     bottom: 0vh;
     right: 1.5vw;
   }
-    .thread-right .downvote:hover {
+    .post-right .downvote:hover {
       background-image: url(../img/downvote_blue.png);
     }
-  .thread-right .post_rating {
+  .post-right .post_rating {
     font-weight: 700;
     font-size: 1.2em;
     letter-spacing: 0.1em;
@@ -69,7 +71,7 @@ div.thread-show .thread-right {
     right: 1.4vw;
     font-family: monospace;
   }
-div.thread-show .thread-info {
+.post-info {
   font-size: 0.75em;
   font-weight: 300;
   position: absolute;
@@ -77,24 +79,30 @@ div.thread-show .thread-info {
   bottom: 1.75vh;
   line-height: 1em;
 }
-  div.thread-show span.divider {
+  span.divider {
     padding: 0 0.25em;
   }
-  div.thread-show span.comment_symbol {
+  span.comment_symbol,
+  span.view_symbol {
     width: 1em;
     height: 1em;
     margin-bottom: -0.2em;
-    background-image: url(../img/com_symbol_blk.png);
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
   }
-  div.thread-show a.author {
+  span.comment_symbol {
+    background-image: url(../img/com_symbol_blk.png);
+  }
+  span.view_symbol {
+    background-image: url(../img/views.png);
+  }
+  a.author {
     text-decoration: none;
     color: #000;
   }
 
-  /*/GUSTAFS VERSION PRINT POSTS/*/
+  /*/GUSTAFS VERSION PRINT POSTS/
   a.printed-post-frame {
   width: 60vw;
   display: inline-block;
@@ -161,7 +169,7 @@ div.thread-show .thread-info {
   width: 80%;
 }
 
-/*/GUSTAFS VERSION SHOW POSTS/*/
+/GUSTAFS VERSION SHOW POSTS/
 .original-post {
   min-height: 20vh;
   width: inherit;
@@ -224,3 +232,4 @@ div.thread-show .thread-info {
   right: 45px;
   font-family: monospace;
 }
+*/
