--- a/styles/start.css
+++ b/styles/start.css
@@ -23,14 +23,15 @@ a:hover {
 
 /* - - - - - - - */
 
-body {
+body#login_page,
+body#signup_page {
   background-color: rgb(92,144,168);
   background-image: url('../img/lake_background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: multiply;
 }
-div#maincontent {
+div#maincontent_login {
   position: fixed;
   top: 15vh;
   left: 30vw;
@@ -40,7 +41,7 @@ div#maincontent {
   background-color: rgba(236,236,236,0.25);
   border-radius: 50%;
 }
-  #maincontent img {
+  #maincontent_login img {
     width: 25%;
     margin: 5% 37.5%;
     display: inline-block;
@@ -122,7 +123,7 @@ div#signup_form {
     border: none;
     background-color: #ececec;
   }
-/* - - - - - avatar button styling - - - - - - */
+/* - - - - - avatar button styling - - - - - -
   div#signup_form .inputavatar {
     width: 0.1px;
     height: 0.1px;
@@ -144,4 +145,4 @@ div#signup_form {
     line-height: 2em;
     text-align: left;
     padding-left: 10px;
-  }
+  }*/
