--- a/styles/userpage.css
+++ b/styles/userpage.css
@@ -11,10 +11,11 @@
 #userpage_top {
   display: inline-block;
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   margin: 0;
   position: relative;
 }
+/* - - - - - - - - - - - - - - - - - - - - avatar / ändra avatar form - - - - - - - - - */
 #userpage_avatar {
   width: 15vw;
   height: 15vw;
@@ -24,8 +25,73 @@
   background-size: contain;
   position: absolute;
   left: 2%;
-  top: 2%;
+  top: 4%;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  border-radius: 50%;
 }
+#change_avatar_form {
+  width: 15vw;
+  height: 15vw;
+  position: absolute;
+  left: 2%;
+  top: 4%;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 50%;
+  padding: 10% 2.5%;
+  text-align: center;
+
+  display: none;
+}
+  #avatar_upload {
+    width: 0.1px;
+    height: 0.1px;
+    overflow: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+  }
+  #avatar_upload_label {
+    width: 80%;
+    height: 2em;
+    color: #000;
+    cursor: pointer;
+    font-size: 1em;
+    line-height: 1em;
+    text-align: center;
+  }
+  #file_uploaded {
+    font-size: 10px;
+    font-weight: 400;
+  }
+  #change_avatar_submit {
+    width: 50px;
+    height: 50px;
+    background-image: url(../img/submit.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    margin-top: 10px;
+  }
+  #change_avatar_submit:hover {
+      background-image: url(../img/submit_bl.png);
+  }
+#userpage_avatar:hover + #change_avatar_form {
+  display: block;
+}
+#change_avatar_form:hover {
+  display: block;
+}
+#change_avatar_form:active {
+  display: block;
+}
+
+/* - - - - - - - - - - - - - - - - - tagline / info / och sånt - - - - - - */
+
 #userpage_info {
   position: absolute;
   top: 5%;
@@ -60,18 +126,20 @@
   width: 100%;
   height: 50vh;
   color: #fff;
+  display: flex;
+  align-items: stretch;
+  align-content: center;
+  flex-wrap: wrap;
 }
-#box1, #box2, #box3, #box4 {
-  width: 48%;
+#userpage_box_container span {
+  width: 30%;
   height: 50%;
   margin: 0;
-  margin-left: 1%;
-  margin-bottom: 1%;
   display: inline-block;
 }
-#box1, #box4 {
-  background-color: rgba(92,144,168,0.5);
+#userpage_box_container span:nth-child(odd) {
+  background-color: rgba(92,144,168,0.7);
 }
-#box2, #box3 {
-  background-color: rgba(92,144,168,0.1)
+#userpage_box_container span:nth-child(even) {
+  background-color: rgba(92,144,168,0.3);
 }
