--- a/styles/userpage.css
+++ b/styles/userpage.css
@@ -129,21 +129,37 @@
   position: absolute;
   background-color: rgba(0,0,0,0);
   border: none;
+
 }
   #tagline_write_caption, #tagline_submit_caption, #tagline_cancel_caption {
       position: absolute;
-      right: 60px;
-      bottom: 50px;
+      right: 70px;
+      bottom: 40px;
       transition: opacity 0.5s ease-in;
       opacity: 0;
       color: #000;
+  }
+  #tagline_cancel_caption {
+    left: 120px;
   }
 #tagline_write {
   background-image: url(../img/pen.png);
   bottom: 15%;
   right: 5%;
 }
-  #tagline_write:hover + #tagline_write_caption {
+input#tagline_submit {
+  background-image: url(../img/submit_bl.png);
+  bottom: 15%;
+  right: 5%;
+}
+#tagline_cancel {
+  background-image: url(../img/close_bl.png);
+  bottom: 15%;
+  left: 15%;
+}
+  #tagline_write:hover + #tagline_write_caption,
+  #tagline_submit:hover + #tagline_submit_caption,
+  #tagline_cancel:hover + #tagline_cancel_caption {
     opacity: 1;
   }
 
