--- a/styles/userpage.css
+++ b/styles/userpage.css
@@ -93,18 +93,14 @@
 
 #userpage_info {
   position: absolute;
-  top: 5%;
+  top: 10%;
   right: 0;
   display: inline-block;
-  text-align: center;
-  font-size: 20px;
+  font-size: 5em;
   line-height: 40px;
   font-weight: 700;
   color: #fff;
-  width: 50vw;
-}
-#userpage_info span {
-  margin: 5%;
+  width: 39vw;
 }
 /* tagline/bio bruh */
 #userpage_tagline { /*this is where the speech bubble is*/
@@ -185,16 +181,36 @@ input#tagline_submit {
   align-items: stretch;
   align-content: center;
   flex-wrap: wrap;
+  position: absolute;
+  bottom: 0;
 }
 #userpage_box_container span {
-  width: 30%;
-  height: 50%;
+  width: 50%;
+  height: 60%;
   margin: 0;
   display: inline-block;
+  padding: 0 2.5%;
+  overflow: scroll;
 }
-#userpage_box_container span:nth-child(odd) {
+#userpage_box_container span:nth-child(1),
+#userpage_box_container span:nth-child(4) {
   background-color: rgba(92,144,168,0.7);
 }
-#userpage_box_container span:nth-child(even) {
+#userpage_box_container span:nth-child(2),
+#userpage_box_container span:nth-child(3) {
   background-color: rgba(92,144,168,0.3);
+}
+.userpage_box_title {
+  font-size: 1.7em;
+  margin-bottom: 5px;
+}
+.list_of_posts {
+  font-size: 0.9em;
+  line-height: 1.8em;
+  width: 120%;
+  margin: 0 -5.5%;
+  padding-left: 5.5%;
+}
+.list_of_posts:nth-child(even) {
+  background-color: rgba(255, 255, 255, 0.1);
 }
