--- a/styles/posts.css
+++ b/styles/posts.css
@@ -228,3 +228,21 @@ div#write_post #cancel_post {
 div#write_post #cancel_post:hover {
     background-image: url(../img/close_bl.png);
 }
+
+.write-comment {
+  margin-top: 5px;
+  width: 100%;
+  height: 150px;
+  padding-bottom: 25.5px;
+  border: 1px solid rgba(92,144,168,0.2);
+  border-bottom: 6px solid #ececed;
+  background-color: rgba(92,144,168,0.2);
+
+}
+.write-comment-field {
+  height: 100%;
+  width: 100%;
+}
+.write-comment-submit {
+  float: right;
+}
