--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,13 @@ a.links {
 a.links:hover {
   font-weight: 700;
 }
+.errormsg_general {
+  color: red;
+  font-size: 0.9em;
+  line-height: 0.8em;
+  margin: 0;
+  padding: 0;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 body {
   background-color: #ececec;
