--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,9 @@
   font-family: 'Nunito', sans-serif;
   box-sizing: border-box;
 }
+.center {
+  text-align: center;
+}
 .light {
   font-weight: 300;
 }
@@ -145,9 +148,6 @@ div#left-side {
       font-weight: 700;
       padding: 0.5vh 1.93vw 0.25vh 1.95vw;
     }
-    button#admin_panel {
-      float: right;
-    }
   #newpost {
     width: 6vw;
     height: 6vw;
@@ -165,3 +165,35 @@ div#left-side {
       color: #ececec;
       font-weight: 700;
     }
+
+/* admin page */
+.admin_page_main {
+  background-color: rgba(92, 144, 168, 0.5);
+  padding: 0;
+}
+#admin_user_list {
+  width: 102%;
+  margin: 0 -2px;
+}
+#admin_user_list tr:nth-child(even) {
+  background-color: rgba(255,255,255,0.4);
+}
+#admin_user_list td,
+#admin_user_list th {
+  font-size: 0.8em;
+  height: 2em;
+  padding: 0.2em;
+  padding-left: 0.4em;
+}
+#admin_user_list input {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  font-size: 1em;
+}
+#admin_user_list input:hover {
+ font-weight: 700;
+ padding: 0.1em 0.3em;
+}
+#admin_user_list input.last_col {
+  margin-right: -20px;
+}
