--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,13 @@ body {
     font-weight: 700;
     background-color: rgba(255, 255, 255, 0.1);
   }
+  #sidebar #search-field {
+
+  }
+  #sidebar #search-submit {
+
+  }
+  #sidebar
     #sidebar #char-indicator {
       position: fixed;
       bottom: 0;
