--- a/styles/main.css
+++ b/styles/main.css
@@ -80,22 +80,41 @@ body {
     font-weight: 700;
     background-color: rgba(255, 255, 255, 0.1);
   }
-  #sidebar #search-field {
-
+  #search_function {
+    width: 100%;
+    height: 3em;
+    display: inline;
+    margin-top: -0.5em;
+    margin-bottom: -0.75em;
   }
-  #sidebar #search-submit {
-
-  }
-  #sidebar
-    #sidebar #char-indicator {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 20vw;
-      background-color: rgba(255,255,255,0.1);
-      padding: 4vh 1vw 4vh 1vw;
-      color: #ececec;
+    #search_field {
+      width: 80%;
+      margin: 0;
+      height: 3em;
+      border-radius: 10px;
+      border: none;
+      padding: 0.5em 1em;
     }
+    #submit_search {
+      width: 1px;
+      opacity: 0;
+    }
+    img#search_symbol {
+      height: 1.6em;
+      width: 1.6em;
+      margin: 0;
+      margin-bottom: -0.5em;
+      margin-left: 0.5em;
+    }
+  #sidebar #char-indicator {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 20vw;
+    background-color: rgba(255,255,255,0.1);
+    padding: 4vh 1vw 4vh 1vw;
+    color: #ececec;
+  }
     #sidebar #char-indicator:hover span#avatar {
       box-shadow: 0px 0px 15px 1px #ececec;
     }
