--- a/styles/start.css
+++ b/styles/start.css
@@ -78,7 +78,12 @@ div#maincontent_login {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: right;
-      margin-top: 100px;
+      margin-top: 60px;
+    }
+
+    #rememberme {
+      font-size: 0.9em;
+      margin-right: 10px;
     }
 
     a#createuser_link {
