--- a/styles/posts.css
+++ b/styles/posts.css
@@ -85,12 +85,11 @@ a.post-link {
     font-family: monospace;
   }
 .post-info {
-  font-size: 0.75em;
+  font-size: 0.7em;
   font-weight: 300;
   clear: both;
-  line-height: 1em;
-  position: absolute;
-  bottom: 0;
+  display: block;
+  margin-bottom: -25px;
 }
   span.divider {
     padding: 0 0.25em;
